--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
   <meta charset="UTF-8">
   <title>Intermediate British English Quiz</title>
@@ -82,23 +82,13 @@
 
   <h1>Intermediate British English Quiz</h1>
   <p class="intro">
-    Choose the correct form from each drop-down.  
-    You will practise regular & irregular past tenses, present perfect forms,  
-    and active vs passive voice. Good luck!
+    Select the correct option from each drop-down.  
+    You will practise regular and irregular past tense verbs, present perfect forms,  
+    and passive or active voice. Good luck!
   </p>
 
   <div id="quiz">
-    <!-- Question template:
-    <div class="question" id="qN-wrap">
-      <label for="qN">N. Your question here</label>
-      <select id="qN">
-        <option value="">— select —</option>
-        <option value="correctAnswer">correctAnswer</option>
-        …other options…
-      </select>
-      <span class="feedback"></span>
-    </div>
-    -->
+    <!-- 1 -->
     <div class="question" id="q1-wrap">
       <label for="q1">1. She ____ to the shops yesterday.</label>
       <select id="q1">
@@ -111,6 +101,7 @@
       <span class="feedback"></span>
     </div>
 
+    <!-- 2 -->
     <div class="question" id="q2-wrap">
       <label for="q2">2. They ____ to the cinema last week.</label>
       <select id="q2">
@@ -123,16 +114,301 @@
       <span class="feedback"></span>
     </div>
 
-    <!-- …repeat for questions 3–25… -->
+    <!-- 3 -->
+    <div class="question" id="q3-wrap">
+      <label for="q3">3. I ____ (not/finish) my homework last week.</label>
+      <select id="q3">
+        <option value="">— select —</option>
+        <option value="didn't finish">didn't finish</option>
+        <option value="haven't finished">haven't finished</option>
+        <option value="don't finish">don't finish</option>
+        <option value="was not finishing">was not finishing</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
 
+    <!-- 4 -->
+    <div class="question" id="q4-wrap">
+      <label for="q4">4. He ____ his homework two hours ago.</label>
+      <select id="q4">
+        <option value="">— select —</option>
+        <option value="finished">finished</option>
+        <option value="has finished">has finished</option>
+        <option value="had finished">had finished</option>
+        <option value="finishes">finishes</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 5 -->
+    <div class="question" id="q5-wrap">
+      <label for="q5">5. We ____ to Berlin last month.</label>
+      <select id="q5">
+        <option value="">— select —</option>
+        <option value="flew">flew</option>
+        <option value="has flown">has flown</option>
+        <option value="were flown">were flown</option>
+        <option value="flies">flies</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 6 -->
+    <div class="question" id="q6-wrap">
+      <label for="q6">6. The band ____ the album in 2010.</label>
+      <select id="q6">
+        <option value="">— select —</option>
+        <option value="released">released</option>
+        <option value="has released">has released</option>
+        <option value="was released">was released</option>
+        <option value="releases">releases</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 7 -->
+    <div class="question" id="q7-wrap">
+      <label for="q7">7. She ____ the new gallery several times.</label>
+      <select id="q7">
+        <option value="">— select —</option>
+        <option value="has visited">has visited</option>
+        <option value="visited">visited</option>
+        <option value="has visit">has visit</option>
+        <option value="had visited">had visited</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 8 -->
+    <div class="question" id="q8-wrap">
+      <label for="q8">8. I ____ that film yet.</label>
+      <select id="q8">
+        <option value="">— select —</option>
+        <option value="haven't seen">haven't seen</option>
+        <option value="didn't see">didn't see</option>
+        <option value="don't see">don't see</option>
+        <option value="wasn't seen">wasn't seen</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 9 -->
+    <div class="question" id="q9-wrap">
+      <label for="q9">9. They ____ in London since 2015.</label>
+      <select id="q9">
+        <option value="">— select —</option>
+        <option value="have lived">have lived</option>
+        <option value="lived">lived</option>
+        <option value="have live">have live</option>
+        <option value="had lived">had lived</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 10 -->
+    <div class="question" id="q10-wrap">
+      <label for="q10">10. He ____ his work already.</label>
+      <select id="q10">
+        <option value="">— select —</option>
+        <option value="has finished">has finished</option>
+        <option value="finished">finished</option>
+        <option value="had finished">had finished</option>
+        <option value="will have finished">will have finished</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 11 -->
+    <div class="question" id="q11-wrap">
+      <label for="q11">11. We ____ before.</label>
+      <select id="q11">
+        <option value="">— select —</option>
+        <option value="have met">have met</option>
+        <option value="met">met</option>
+        <option value="has met">has met</option>
+        <option value="had met">had met</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 12 -->
+    <div class="question" id="q12-wrap">
+      <label for="q12">12. You ____ sushi?</label>
+      <select id="q12">
+        <option value="">— select —</option>
+        <option value="have you ever eaten">have you ever eaten</option>
+        <option value="did you ever eat">did you ever eat</option>
+        <option value="have you eat">have you eat</option>
+        <option value="had you ate">had you ate</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 13 -->
+    <div class="question" id="q13-wrap">
+      <label for="q13">13. The cake ____ by my aunt for the party.</label>
+      <select id="q13">
+        <option value="">— select —</option>
+        <option value="was baked">was baked</option>
+        <option value="baked">baked</option>
+        <option value="has been baked">has been baked</option>
+        <option value="is baking">is baking</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 14 -->
+    <div class="question" id="q14-wrap">
+      <label for="q14">14. The letter ____ this morning.</label>
+      <select id="q14">
+        <option value="">— select —</option>
+        <option value="was posted">was posted</option>
+        <option value="posted">posted</option>
+        <option value="has been posted">has been posted</option>
+        <option value="is posted">is posted</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 15 -->
+    <div class="question" id="q15-wrap">
+      <label for="q15">15. These questions ____ by the teacher yesterday.</label>
+      <select id="q15">
+        <option value="">— select —</option>
+        <option value="were set">were set</option>
+        <option value="set">set</option>
+        <option value="has been set">has been set</option>
+        <option value="are set">are set</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 16 -->
+    <div class="question" id="q16-wrap">
+      <label for="q16">16. A new bridge ____ over the river last year.</label>
+      <select id="q16">
+        <option value="">— select —</option>
+        <option value="was built">was built</option>
+        <option value="built">built</option>
+        <option value="has been built">has been built</option>
+        <option value="is built">is built</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 17 -->
+    <div class="question" id="q17-wrap">
+      <label for="q17">17. The thief ____ by the police.</label>
+      <select id="q17">
+        <option value="">— select —</option>
+        <option value="was caught">was caught</option>
+        <option value="caught">caught</option>
+        <option value="has been caught">has been caught</option>
+        <option value="is caught">is caught</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 18 -->
+    <div class="question" id="q18-wrap">
+      <label for="q18">18. The house ____ in 1920.</label>
+      <select id="q18">
+        <option value="">— select —</option>
+        <option value="was constructed">was constructed</option>
+        <option value="constructed">constructed</option>
+        <option value="has been constructed">has been constructed</option>
+        <option value="is constructed">is constructed</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 19 -->
+    <div class="question" id="q19-wrap">
+      <label for="q19">19. The window ____ by the wind.</label>
+      <select id="q19">
+        <option value="">— select —</option>
+        <option value="was broken">was broken</option>
+        <option value="broke">broke</option>
+        <option value="has been broken">has been broken</option>
+        <option value="is broken">is broken</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 20 -->
+    <div class="question" id="q20-wrap">
+      <label for="q20">20. They ____ the task yesterday.</label>
+      <select id="q20">
+        <option value="">— select —</option>
+        <option value="completed">completed</option>
+        <option value="have completed">have completed</option>
+        <option value="completes">completes</option>
+        <option value="had completed">had completed</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 21 -->
+    <div class="question" id="q21-wrap">
+      <label for="q21">21. She ____ the letter yesterday.</label>
+      <select id="q21">
+        <option value="">— select —</option>
+        <option value="wrote">wrote</option>
+        <option value="has written">has written</option>
+        <option value="was written">was written</option>
+        <option value="writes">writes</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 22 -->
+    <div class="question" id="q22-wrap">
+      <label for="q22">22. I ____ your message.</label>
+      <select id="q22">
+        <option value="">— select —</option>
+        <option value="haven't received">haven't received</option>
+        <option value="didn't receive">didn't receive</option>
+        <option value="don't receive">don't receive</option>
+        <option value="was not received">was not received</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 23 -->
+    <div class="question" id="q23-wrap">
+      <label for="q23">23. We ____ their new house.</label>
+      <select id="q23">
+        <option value="">— select —</option>
+        <option value="have seen">have seen</option>
+        <option value="saw">saw</option>
+        <option value="has seen">has seen</option>
+        <option value="have saw">have saw</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 24 -->
+    <div class="question" id="q24-wrap">
+      <label for="q24">24. He ____ all his old books.</label>
+      <select id="q24">
+        <option value="">— select —</option>
+        <option value="sold">sold</option>
+        <option value="has sold">has sold</option>
+        <option value="had sold">had sold</option>
+        <option value="sells">sells</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+
+    <!-- 25 -->
     <div class="question" id="q25-wrap">
-      <label for="q25">25. He ____ his homework before dinner.</label>
+      <label for="q25">25. The teacher ____ the exam results this morning.</label>
       <select id="q25">
         <option value="">— select —</option>
-        <option value="had completed">had completed</option>
-        <option value="completed">completed</option>
-        <option value="has completed">has completed</option>
-        <option value="completes">completes</option>
+        <option value="announced">announced</option>
+        <option value="has announced">has announced</option>
+        <option value="was announced">was announced</option>
+        <option value="had announced">had announced</option>
       </select>
       <span class="feedback"></span>
     </div>
@@ -146,43 +422,43 @@
     const answers = {
       q1: "walked",
       q2: "went",
-      q3: "haven't seen",
+      q3: "didn't finish",
       q4: "finished",
       q5: "flew",
-      q6: "has visited",
-      q7: "was baked",
-      q8: "cooked",
-      q9: "were taken",
-      q10: "met",
-      q11: "have completed",
-      q12: "was posted",
-      q13: "broke",
-      q14: "learnt",
-      q15: "hasn't finished",
-      q16: "bought",
-      q17: "hadn't seen",
-      q18: "have lived",
-      q19: "is played",
-      q20: "dropped",
+      q6: "released",
+      q7: "has visited",
+      q8: "haven't seen",
+      q9: "have lived",
+      q10: "has finished",
+      q11: "have met",
+      q12: "have you ever eaten",
+      q13: "was baked",
+      q14: "was posted",
+      q15: "were set",
+      q16: "was built",
+      q17: "was caught",
+      q18: "was constructed",
+      q19: "was broken",
+      q20: "completed",
       q21: "wrote",
-      q22: "have just finished",
-      q23: "had finished",
-      q24: "are explained",
-      q25: "had completed"
+      q22: "haven't received",
+      q23: "have seen",
+      q24: "sold",
+      q25: "announced"
     };
 
     function submitQuiz() {
       let score = 0;
       for (let i = 1; i <= 25; i++) {
-        const qid = 'q' + i;
-        const wrap = document.getElementById(qid + '-wrap');
-        const select = document.getElementById(qid);
+        const id = 'q' + i;
+        const wrap = document.getElementById(id + '-wrap');
+        const select = document.getElementById(id);
         const feedback = wrap.querySelector('.feedback');
 
-        wrap.classList.remove('correct','incorrect');
+        wrap.classList.remove('correct', 'incorrect');
         feedback.textContent = '';
 
-        if (select.value === answers[qid]) {
+        if (select.value === answers[id]) {
           wrap.classList.add('correct');
           feedback.textContent = 'Correct';
           score++;
@@ -192,7 +468,6 @@
         }
         select.disabled = true;
       }
-
       document.getElementById('result').textContent =
         `You scored ${score} out of 25.`;
     }
