--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 <head>
   <meta charset="UTF-8">
-  <title>Quiz</title>
+  <title>Intermediate British English Quiz</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -82,9 +82,7 @@
 
   <h1>Intermediate British English Quiz</h1>
   <p class="intro">
-    Select the correct option from each drop-down.  
-    You will practise regular and irregular past tense verbs, present perfect forms,  
-    and passive or active voice. Good luck!
+    Select the correct option from each drop-down. You will practise regular and irregular past tense verbs, present perfect forms, and active vs passive voice. Good luck!
   </p>
 
   <div id="quiz">
@@ -100,33 +98,30 @@
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 2 -->
     <div class="question" id="q2-wrap">
       <label for="q2">2. They ____ to the cinema last week.</label>
       <select id="q2">
         <option value="">— select —</option>
         <option value="went">went</option>
-        <option value="gone">gone</option>
         <option value="have gone">have gone</option>
+        <option value="gone">gone</option>
         <option value="go">go</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 3 -->
     <div class="question" id="q3-wrap">
-      <label for="q3">3. I ____ (not/finish) my homework last week.</label>
+      <label for="q3">3. I ____ my homework yet.</label>
       <select id="q3">
         <option value="">— select —</option>
-        <option value="didn't finish">didn't finish</option>
         <option value="haven't finished">haven't finished</option>
+        <option value="didn't finish">didn't finish</option>
+        <option value="haven't finish">haven't finish</option>
         <option value="don't finish">don't finish</option>
-        <option value="was not finishing">was not finishing</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 4 -->
     <div class="question" id="q4-wrap">
       <label for="q4">4. He ____ his homework two hours ago.</label>
@@ -139,20 +134,18 @@
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 5 -->
     <div class="question" id="q5-wrap">
       <label for="q5">5. We ____ to Berlin last month.</label>
       <select id="q5">
         <option value="">— select —</option>
         <option value="flew">flew</option>
-        <option value="has flown">has flown</option>
+        <option value="have flown">have flown</option>
         <option value="were flown">were flown</option>
         <option value="flies">flies</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 6 -->
     <div class="question" id="q6-wrap">
       <label for="q6">6. The band ____ the album in 2010.</label>
@@ -165,89 +158,22 @@
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 7 -->
     <div class="question" id="q7-wrap">
-      <label for="q7">7. She ____ the new gallery several times.</label>
+      <label for="q7">7. She ____ the museum last year.</label>
       <select id="q7">
         <option value="">— select —</option>
-        <option value="has visited">has visited</option>
         <option value="visited">visited</option>
-        <option value="has visit">has visit</option>
+        <option value="has visited">has visited</option>
         <option value="had visited">had visited</option>
+        <option value="visits">visits</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 8 -->
     <div class="question" id="q8-wrap">
-      <label for="q8">8. I ____ that film yet.</label>
+      <label for="q8">8. The cake ____ by my aunt for the party.</label>
       <select id="q8">
-        <option value="">— select —</option>
-        <option value="haven't seen">haven't seen</option>
-        <option value="didn't see">didn't see</option>
-        <option value="don't see">don't see</option>
-        <option value="wasn't seen">wasn't seen</option>
-      </select>
-      <span class="feedback"></span>
-    </div>
-
-    <!-- 9 -->
-    <div class="question" id="q9-wrap">
-      <label for="q9">9. They ____ in London since 2015.</label>
-      <select id="q9">
-        <option value="">— select —</option>
-        <option value="have lived">have lived</option>
-        <option value="lived">lived</option>
-        <option value="have live">have live</option>
-        <option value="had lived">had lived</option>
-      </select>
-      <span class="feedback"></span>
-    </div>
-
-    <!-- 10 -->
-    <div class="question" id="q10-wrap">
-      <label for="q10">10. He ____ his work already.</label>
-      <select id="q10">
-        <option value="">— select —</option>
-        <option value="has finished">has finished</option>
-        <option value="finished">finished</option>
-        <option value="had finished">had finished</option>
-        <option value="will have finished">will have finished</option>
-      </select>
-      <span class="feedback"></span>
-    </div>
-
-    <!-- 11 -->
-    <div class="question" id="q11-wrap">
-      <label for="q11">11. We ____ before.</label>
-      <select id="q11">
-        <option value="">— select —</option>
-        <option value="have met">have met</option>
-        <option value="met">met</option>
-        <option value="has met">has met</option>
-        <option value="had met">had met</option>
-      </select>
-      <span class="feedback"></span>
-    </div>
-
-    <!-- 12 -->
-    <div class="question" id="q12-wrap">
-      <label for="q12">12. You ____ sushi?</label>
-      <select id="q12">
-        <option value="">— select —</option>
-        <option value="have you ever eaten">have you ever eaten</option>
-        <option value="did you ever eat">did you ever eat</option>
-        <option value="have you eat">have you eat</option>
-        <option value="had you ate">had you ate</option>
-      </select>
-      <span class="feedback"></span>
-    </div>
-
-    <!-- 13 -->
-    <div class="question" id="q13-wrap">
-      <label for="q13">13. The cake ____ by my aunt for the party.</label>
-      <select id="q13">
         <option value="">— select —</option>
         <option value="was baked">was baked</option>
         <option value="baked">baked</option>
@@ -256,11 +182,10 @@
       </select>
       <span class="feedback"></span>
     </div>
-
-    <!-- 14 -->
-    <div class="question" id="q14-wrap">
-      <label for="q14">14. The letter ____ this morning.</label>
-      <select id="q14">
+    <!-- 9 -->
+    <div class="question" id="q9-wrap">
+      <label for="q9">9. The letter ____ this morning.</label>
+      <select id="q9">
         <option value="">— select —</option>
         <option value="was posted">was posted</option>
         <option value="posted">posted</option>
@@ -269,24 +194,58 @@
       </select>
       <span class="feedback"></span>
     </div>
-
-    <!-- 15 -->
-    <div class="question" id="q15-wrap">
-      <label for="q15">15. These questions ____ by the teacher yesterday.</label>
-      <select id="q15">
+    <!-- 10 -->
+    <div class="question" id="q10-wrap">
+      <label for="q10">10. The teacher ____ the exams yesterday.</label>
+      <select id="q10">
         <option value="">— select —</option>
-        <option value="were set">were set</option>
-        <option value="set">set</option>
-        <option value="has been set">has been set</option>
-        <option value="are set">are set</option>
+        <option value="marked">marked</option>
+        <option value="has marked">has marked</option>
+        <option value="was marked">was marked</option>
+        <option value="marks">marks</option>
       </select>
       <span class="feedback"></span>
     </div>
-
-    <!-- 16 -->
-    <div class="question" id="q16-wrap">
-      <label for="q16">16. A new bridge ____ over the river last year.</label>
-      <select id="q16">
+    <!-- 11 -->
+    <div class="question" id="q11-wrap">
+      <label for="q11">11. The exams ____ by the teacher yesterday.</label>
+      <select id="q11">
+        <option value="">— select —</option>
+        <option value="were marked">were marked</option>
+        <option value="have been marked">have been marked</option>
+        <option value="marked">marked</option>
+        <option value="were mark">were mark</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+    <!-- 12 -->
+    <div class="question" id="q12-wrap">
+      <label for="q12">12. We ____ the project before the deadline.</label>
+      <select id="q12">
+        <option value="">— select —</option>
+        <option value="have finished">have finished</option>
+        <option value="finished">finished</option>
+        <option value="had finished">had finished</option>
+        <option value="finishes">finishes</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+    <!-- 13 -->
+    <div class="question" id="q13-wrap">
+      <label for="q13">13. We ____ that film yet.</label>
+      <select id="q13">
+        <option value="">— select —</option>
+        <option value="haven't seen">haven't seen</option>
+        <option value="didn't see">didn't see</option>
+        <option value="don't see">don't see</option>
+        <option value="haven't saw">haven't saw</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+    <!-- 14 -->
+    <div class="question" id="q14-wrap">
+      <label for="q14">14. A new bridge ____ over the river last year.</label>
+      <select id="q14">
         <option value="">— select —</option>
         <option value="was built">was built</option>
         <option value="built">built</option>
@@ -295,62 +254,81 @@
       </select>
       <span class="feedback"></span>
     </div>
-
+    <!-- 15 -->
+    <div class="question" id="q15-wrap">
+      <label for="q15">15. Someone ____ the window last night.</label>
+      <select id="q15">
+        <option value="">— select —</option>
+        <option value="broke">broke</option>
+        <option value="has broken">has broken</option>
+        <option value="was broken">was broken</option>
+        <option value="broken">broken</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
+    <!-- 16 -->
+    <div class="question" id="q16-wrap">
+      <label for="q16">16. The report ____ by the manager yesterday.</label>
+      <select id="q16">
+        <option value="">— select —</option>
+        <option value="was reviewed">was reviewed</option>
+        <option value="reviewed">reviewed</option>
+        <option value="has been reviewed">has been reviewed</option>
+        <option value="is reviewed">is reviewed</option>
+      </select>
+      <span class="feedback"></span>
+    </div>
     <!-- 17 -->
     <div class="question" id="q17-wrap">
-      <label for="q17">17. The thief ____ by the police.</label>
+      <label for="q17">17. The manager ____ the report yesterday.</label>
       <select id="q17">
         <option value="">— select —</option>
-        <option value="was caught">was caught</option>
-        <option value="caught">caught</option>
-        <option value="has been caught">has been caught</option>
-        <option value="is caught">is caught</option>
+        <option value="reviewed">reviewed</option>
+        <option value="has reviewed">has reviewed</option>
+        <option value="was reviewed">was reviewed</option>
+        <option value="reviews">reviews</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 18 -->
     <div class="question" id="q18-wrap">
-      <label for="q18">18. The house ____ in 1920.</label>
+      <label for="q18">18. I ____ your message.</label>
       <select id="q18">
         <option value="">— select —</option>
-        <option value="was constructed">was constructed</option>
-        <option value="constructed">constructed</option>
-        <option value="has been constructed">has been constructed</option>
-        <option value="is constructed">is constructed</option>
+        <option value="haven't received">haven't received</option>
+        <option value="didn't receive">didn't receive</option>
+        <option value="don't receive">don't receive</option>
+        <option value="was received">was received</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 19 -->
     <div class="question" id="q19-wrap">
-      <label for="q19">19. The window ____ by the wind.</label>
+      <label for="q19">19. They ____ in London since 2015.</label>
       <select id="q19">
         <option value="">— select —</option>
-        <option value="was broken">was broken</option>
-        <option value="broke">broke</option>
-        <option value="has been broken">has been broken</option>
-        <option value="is broken">is broken</option>
+        <option value="have lived">have lived</option>
+        <option value="lived">lived</option>
+        <option value="have live">have live</option>
+        <option value="had lived">had lived</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 20 -->
     <div class="question" id="q20-wrap">
-      <label for="q20">20. They ____ the task yesterday.</label>
+      <label for="q20">20. The novel ____ by the author in 1935.</label>
       <select id="q20">
         <option value="">— select —</option>
-        <option value="completed">completed</option>
-        <option value="have completed">have completed</option>
-        <option value="completes">completes</option>
-        <option value="had completed">had completed</option>
+        <option value="was written">was written</option>
+        <option value="wrote">wrote</option>
+        <option value="has been written">has been written</option>
+        <option value="writes">writes</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 21 -->
     <div class="question" id="q21-wrap">
-      <label for="q21">21. She ____ the letter yesterday.</label>
+      <label for="q21">21. The author ____ the novel in 1935.</label>
       <select id="q21">
         <option value="">— select —</option>
         <option value="wrote">wrote</option>
@@ -360,55 +338,51 @@
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 22 -->
     <div class="question" id="q22-wrap">
-      <label for="q22">22. I ____ your message.</label>
+      <label for="q22">22. She ____ French at school.</label>
       <select id="q22">
         <option value="">— select —</option>
-        <option value="haven't received">haven't received</option>
-        <option value="didn't receive">didn't receive</option>
-        <option value="don't receive">don't receive</option>
-        <option value="was not received">was not received</option>
+        <option value="learnt">learnt</option>
+        <option value="learned">learned</option>
+        <option value="has learnt">has learnt</option>
+        <option value="learning">learning</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 23 -->
     <div class="question" id="q23-wrap">
-      <label for="q23">23. We ____ their new house.</label>
+      <label for="q23">23. These questions ____ by the teacher last Friday.</label>
       <select id="q23">
         <option value="">— select —</option>
-        <option value="have seen">have seen</option>
-        <option value="saw">saw</option>
-        <option value="has seen">has seen</option>
-        <option value="have saw">have saw</option>
+        <option value="were set">were set</option>
+        <option value="set">set</option>
+        <option value="have been set">have been set</option>
+        <option value="are set">are set</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 24 -->
     <div class="question" id="q24-wrap">
-      <label for="q24">24. He ____ all his old books.</label>
+      <label for="q24">24. They ____ these questions last Friday.</label>
       <select id="q24">
         <option value="">— select —</option>
-        <option value="sold">sold</option>
-        <option value="has sold">has sold</option>
-        <option value="had sold">had sold</option>
-        <option value="sells">sells</option>
+        <option value="set">set</option>
+        <option value="were set">were set</option>
+        <option value="have set">have set</option>
+        <option value="sets">sets</option>
       </select>
       <span class="feedback"></span>
     </div>
-
     <!-- 25 -->
     <div class="question" id="q25-wrap">
-      <label for="q25">25. The teacher ____ the exam results this morning.</label>
+      <label for="q25">25. I ____ my dinner already.</label>
       <select id="q25">
         <option value="">— select —</option>
-        <option value="announced">announced</option>
-        <option value="has announced">has announced</option>
-        <option value="was announced">was announced</option>
-        <option value="had announced">had announced</option>
+        <option value="have eaten">have eaten</option>
+        <option value="ate">ate</option>
+        <option value="has eaten">has eaten</option>
+        <option value="have ate">have ate</option>
       </select>
       <span class="feedback"></span>
     </div>
@@ -422,29 +396,29 @@
     const answers = {
       q1: "walked",
       q2: "went",
-      q3: "didn't finish",
+      q3: "haven't finished",
       q4: "finished",
       q5: "flew",
       q6: "released",
-      q7: "has visited",
-      q8: "haven't seen",
-      q9: "have lived",
-      q10: "has finished",
-      q11: "have met",
-      q12: "have you ever eaten",
-      q13: "was baked",
-      q14: "was posted",
-      q15: "were set",
-      q16: "was built",
-      q17: "was caught",
-      q18: "was constructed",
-      q19: "was broken",
-      q20: "completed",
+      q7: "visited",
+      q8: "was baked",
+      q9: "was posted",
+      q10: "marked",
+      q11: "were marked",
+      q12: "have finished",
+      q13: "haven't seen",
+      q14: "was built",
+      q15: "broke",
+      q16: "was reviewed",
+      q17: "reviewed",
+      q18: "haven't received",
+      q19: "have lived",
+      q20: "was written",
       q21: "wrote",
-      q22: "haven't received",
-      q23: "have seen",
-      q24: "sold",
-      q25: "announced"
+      q22: "learnt",
+      q23: "were set",
+      q24: "set",
+      q25: "have eaten"
     };
 
     function submitQuiz() {
@@ -460,7 +434,7 @@
 
         if (select.value === answers[id]) {
           wrap.classList.add('correct');
-          feedback.textContent = 'Correct';
+          feedback.textContent = 'Correct!';
           score++;
         } else {
           wrap.classList.add('incorrect');
